# TensorLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ops.cpp  ops.h  tensor.h  test_tensor.cpp
apps/: CMakeLists.txt  SingleAttentionHead.cpp  linearRegression.cpp  main.cpp  test.cpp
benchmarks/: CMakeLists.txt  bench_tensor.cpp  benchmark.txt
csvlib/: CMakeLists.txt
csvlib/include/csvlib/: csv.h
csvlib/src/: csv.cpp
dataLoader/: CMakeLists.txt
dataLoader/include/dataLoader/: loader.h
dataLoader/src/: loader.cpp
include/: autograd.h  ops.h  tensor.h
include/ops/: ops.h
include/tensor/: tensor.h
include/tensorlib/: ops.h  tensor.h
include/tensorlib/autograd/: GradFunc.h
include/tensorlib/ops/: ops.h
include/tensorlib/tensor/: tensor.h
src/: bench_tensor.cpp  main.cpp  ops.cpp  tensor.cpp  test_tensor.cpp
src/ops/: ops.cpp
src/tensor/: tensor.cpp  tensor_RNG.cpp
src/tests/: bench_tensor.cpp  test_tensor.cpp
tensor/: CMakeLists.txt
tensor/include/tensorlib/: autograd.h  embedding.h  loader.h  scaler.h  tensor_RNG.h  tensor_impl.h  tokenizer.h  trainer.h
tensor/include/tensorlib/autograd/: autograd.h
tensor/include/tensorlib/data/: loader.h
tensor/include/tensorlib/ops/: embedding.h  ops.h
tensor/include/tensorlib/tensor/: scaler.h  tensor.h  tensor_RNG.h  tensor_impl.h
tensor/include/tensorlib/tokenizer/: tokenizer.h  trainer.h
tensor/include/tensorlib/tokenizer/impl/: bpe.h  utf8.h
tensor/src/autograd/: autograd.cpp
tensor/src/ops/: embedding.cpp  ops.cpp
tensor/src/tensor/: tensor.cpp  tensor_RNG.cpp  tensor_impl.cpp
tensor/src/tokenizer/: tokenizer.cpp  trainer.cpp
tensor/src/tokenizer/impl/: bpe.cpp  utf8.cpp
tests/: CMakeLists.txt  test_tensor.cpp
